fix: code scan