@@ -9,7 +9,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/v1/company-commission-schemes")
@@ -31,7 +30,7 @@ public class CompanyCommissionSchemeController {
 
         List<CompanyCommissionSchemeDTO> result= list.stream()
                 .map(mapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
 
         return ResponseEntity.ok(result);
     }
